--- a/app/src/main/res/layout/navigation_bar.xml
+++ b/app/src/main/res/layout/navigation_bar.xml
@@ -6,12 +6,14 @@
     android:padding="@dimen/marginSize"
     android:paddingRight="@dimen/marginSize">
     <ImageView
+        android:id="@+id/iv_back"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:src="@mipmap/back"
         android:layout_gravity="center_vertical"/>
 
     <TextView
+        android:id="@+id/tv_title"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textSize="@dimen/navigationBarTitleSize"
@@ -20,6 +22,7 @@
         android:text="NilMusic"/>
 
     <ImageView
+        android:id="@+id/iv_me"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:src="@mipmap/me"
