--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -15,14 +15,42 @@
         android:src="@mipmap/nil_logo"
         android:layout_gravity="center_horizontal"
         android:layout_marginTop="@dimen/marginSize" />
-    <!--logo-->
+    <!--username-->
     <top.suvvm.nilmusic.views.InputView
+        android:id="@+id/input_phone"
         android:layout_width="wrap_content"
         android:layout_height="@dimen/inputViewHeight"
         android:layout_marginTop="@dimen/marginSize"
         app:input_icon="@mipmap/phone"
         app:input_hint="手机号"
-        app:is_psw="false"
-        />
-    <view style="@style/line"/>
+        app:is_psw="false"/>
+    <View style="@style/line"/>
+    <!--password-->
+    <top.suvvm.nilmusic.views.InputView
+        android:id="@+id/input_password"
+        android:layout_width="wrap_content"
+        android:layout_height="@dimen/inputViewHeight"
+        android:layout_marginTop="@dimen/marginSize"
+        app:input_icon="@mipmap/password"
+        app:input_hint="密码"
+        app:is_psw="true"/>
+
+    <View style="@style/line"/>
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:padding="@dimen/marginSize"
+        android:text="立即注册"
+        android:layout_gravity="center_horizontal"
+        android:textSize="@dimen/infoSize"
+        android:textColor="@color/mainColor"
+        android:onClick="onRegisterClick"/>
+
+    <Button
+        style="@style/commentButton"
+        android:text="登  录"
+        android:layout_marginTop="@dimen/marginSize"/>
+
+
 </LinearLayout>
