--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -4,5 +4,6 @@
     <color name="colorPrimaryDark">#3700B3</color>
     <color name="colorAccent">#03DAC5</color>
     <color name="mainColor">#D81E06</color>
+    <color name="mainColorHighlight">#C80F1F</color>
     <color name="lineColor">#C3C3C3</color>
 </resources>
