--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -6,12 +6,23 @@
         <item name="colorPrimaryDark">@color/mainColor</item>
     </style>
 
-    <!--分割线样式-->
+    <!-- 分割线样式 -->
     <style name="line">
         <item name="android:layout_height">1dp</item>
-        <item name="android:layout_weight">match_parent</item>
+        <item name="android:layout_width">match_parent</item>
         <item name="android:background">@color/lineColor</item>
         <item name="android:layout_margin">@dimen/marginSize</item>
+    </style>
+    <!-- 登录按钮样式 -->
+    <style name="commentButton">
+        <item name="android:layout_width">match_parent</item>
+        <item name="android:layout_height">@dimen/buttonHeight</item>
+        <item name="android:textColor">@android:color/white</item>
+        <item name="android:textSize">@dimen/titleSize</item>
+        <item name="android:layout_marginLeft">@dimen/marginSize</item>
+        <item name="android:layout_marginRight">@dimen/marginSize</item>
+        <item name="android:gravity">center</item>
+        <item name="android:background">@drawable/button_commit_select</item>
     </style>
 
 </resources>
