--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -50,7 +50,8 @@
     <Button
         style="@style/commentButton"
         android:text="登  录"
-        android:layout_marginTop="@dimen/marginSize"/>
+        android:layout_marginTop="@dimen/marginSize"
+        android:onClick="onCommitClick"/>
 
 
 </LinearLayout>
