create register activity

--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -5,8 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context=".activities.LoginActivity">
-
+    tools:context=".activities.RegisterActivity">
     <include layout="@layout/navigation_bar"/>
     <!--logo-->
     <ImageView
@@ -33,24 +32,21 @@
         app:input_icon="@mipmap/password"
         app:input_hint="密码"
         app:is_psw="true"/>
+    <View style="@style/line"/>
+    <!--confirm password-->
+    <top.suvvm.nilmusic.views.InputView
+        android:id="@+id/input_password_confirm"
+        android:layout_width="wrap_content"
+        android:layout_height="@dimen/inputViewHeight"
+        app:input_icon="@mipmap/password"
+        app:input_hint="确认密码"
+        app:is_psw="true"/>
 
     <View style="@style/line"/>
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:padding="@dimen/marginSize"
-        android:text="立即注册"
-        android:layout_gravity="center_horizontal"
-        android:textSize="@dimen/infoSize"
-        android:textColor="@color/mainColor"
-        android:onClick="onRegisterClick"/>
-
     <Button
         style="@style/commentButton"
-        android:text="登  录"
+        android:text="注  册"
         android:layout_marginTop="@dimen/marginSize"
-        android:onClick="onCommitClick"/>
-
-
+        android:onClick="onRegisterClick"/>
 </LinearLayout>
