--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -6,4 +6,5 @@
     <color name="mainColor">#D81E06</color>
     <color name="mainColorHighlight">#C80F1F</color>
     <color name="lineColor">#C3C3C3</color>
+    <color name="itemColorHighlight">#DEE1E6</color>
 </resources>
