--- a/app/src/main/res/values/dimension.xml
+++ b/app/src/main/res/values/dimension.xml
@@ -8,4 +8,5 @@
     <dimen name="buttonHeight">44dp</dimen>
     <dimen name="radius">5dp</dimen>
     <dimen name="inputViewHeight">44dp</dimen>
+    <dimen name="itemHeight">44dp</dimen>
 </resources>
