Load picture by url

--- a/app/src/main/res/layout/item_list_music.xml
+++ b/app/src/main/res/layout/item_list_music.xml
@@ -8,6 +8,7 @@
     android:padding="@dimen/marginSize">
 
     <ImageView
+        android:id="@+id/iv_icon"
         android:layout_width="@dimen/itemIconSize"
         android:layout_height="@dimen/itemIconSize"
         android:src="@mipmap/img1"/>
