--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -44,7 +44,7 @@
                 android:layout_height="wrap_content"
                 android:id="@+id/rv_grid"/>
 
-
+            <!--歌曲列表-->
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
