--- a/app/src/main/res/layout/item_grid_music.xml
+++ b/app/src/main/res/layout/item_grid_music.xml
@@ -10,6 +10,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
         <top.suvvm.nilmusic.views.WEqualHImageView
+            android:id="@+id/iv_icon"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:scaleType="fitXY"
