--- a/app/src/main/res/values/dimension.xml
+++ b/app/src/main/res/values/dimension.xml
@@ -15,5 +15,7 @@
     <dimen name="itemIconSize">56dp</dimen>
     <dimen name="itemPlaySize">36dp</dimen>
     <dimen name="musicInfoMarginSize">480dp</dimen>
+    <dimen name="discTopSize">90dp</dimen>
+    <dimen name="playMusicIconSize">210dp</dimen>
 
 </resources>
