realize the function of change password & create DataSource

--- a/app/src/main/res/layout/activity_change_password.xml
+++ b/app/src/main/res/layout/activity_change_password.xml
@@ -49,6 +49,6 @@
         style="@style/commentButton"
         android:text="提  交"
         android:layout_marginTop="@dimen/marginSize"
-        />
+        android:onClick="onSubmitClick"/>
 
 </LinearLayout>
