--- a/app/src/main/res/layout/activity_me.xml
+++ b/app/src/main/res/layout/activity_me.xml
@@ -10,6 +10,7 @@
     <include layout="@layout/navigation_bar"/>
     <!--用户名-->
     <TextView
+        android:id="@+id/tv_user"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:gravity="center_horizontal"
