add dataSource & migrate realm

--- a/app/src/main/res/layout/activity_play_music.xml
+++ b/app/src/main/res/layout/activity_play_music.xml
@@ -36,6 +36,7 @@
         android:layout_marginTop="@dimen/musicInfoMarginSize">
         <!--音乐名称-->
         <TextView
+            android:id="@+id/tv_name"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="音乐名称"
@@ -44,6 +45,7 @@
             android:textSize="@dimen/titleSize"/>
         <!--音乐作者-->
         <TextView
+            android:id="@+id/tv_author"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="音乐作者"
