--- a/app/src/main/res/layout/item_list_music.xml
+++ b/app/src/main/res/layout/item_list_music.xml
@@ -21,6 +21,7 @@
         android:layout_marginLeft="@dimen/marginSize">
 
         <TextView
+            android:id="@+id/tv_name"
             android:layout_width="match_parent"
             android:layout_height="0dp"
             android:layout_weight="1"
@@ -29,6 +30,7 @@
             android:textSize="@dimen/titleSize"
             android:textStyle="bold"/>
         <TextView
+            android:id="@+id/tv_author"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:textColor="@color/infoColor"
