添加新增音乐与新增专辑方法

--- a/app/src/main/res/layout/activity_my_album_list.xml
+++ b/app/src/main/res/layout/activity_my_album_list.xml
@@ -21,13 +21,23 @@
             android:layout_height="22dp"
             android:background="@color/mainColor"/>
         <TextView
-            android:layout_width="wrap_content"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
+            android:layout_weight="1"
             android:text="音乐管理"
             android:textColor="@color/titleColor"
             android:textSize="@dimen/titleSize"
             android:textStyle="bold"
             android:layout_marginLeft="@dimen/marginTabSize"/>
+
+        <ImageView
+            android:id="@+id/iv_add"
+            android:layout_width="@dimen/itemPlaySize"
+            android:layout_height="@dimen/itemPlaySize"
+            android:src="@mipmap/add"
+            android:onClick="onAddMusicClick"
+            android:layout_gravity="center_vertical"
+            android:layout_marginLeft="@dimen/marginSize"/>
 
     </LinearLayout>
     <androidx.recyclerview.widget.RecyclerView
