--- a/app/src/main/res/layout/input_add_music.xml
+++ b/app/src/main/res/layout/input_add_music.xml
@@ -7,7 +7,7 @@
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="请输入专辑名称" />
+        android:text="请输入音乐名称" />
 
     <EditText
         android:id="@+id/et_name"
@@ -27,11 +27,21 @@
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:hint=""
-        android:text="请输入播放量" />
+        android:text="请输入音乐外链" />
 
     <EditText
-        android:id="@+id/et_play_num"
+        android:id="@+id/et_path"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content" />
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:hint=""
+        android:text="请输入作者" />
+
+    <EditText
+        android:id="@+id/et_author"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"/>
 
